[tool.poetry]
name = "can"
version = "0.1.0"
description = "A few simple CAN protocol tools"
authors = ["Skaft <ragnar.gerholm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^2.12.1"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
